test/spec_vectors/simd_boolean/fail/module_12.wat
(module (func $v128.any_true-arg-empty (result v128) (v128.any_true)))